done with some configurations