@@ -19,6 +19,8 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import com.zorvyn.dashboard.security.JwtAuthFilter;
 import com.zorvyn.dashboard.security.UserDetailsServiceImpl;
+import org.springframework.beans.factory.annotation.Value;
+import java.util.Arrays;
 
 import lombok.RequiredArgsConstructor;
 
@@ -33,6 +35,9 @@ public class SecurityConfig {
     private final UserDetailsServiceImpl userDetailsService;
 
     private final PasswordEncoder passwordEncoder;
+
+    @Value("${app.cors.allowed-origin:http://localhost:5173}")
+    private String allowedOrigin;
 
     /*
      * When you try to login , spring does not know how to verify the user and where
@@ -81,10 +86,10 @@ public class SecurityConfig {
 
         CorsConfiguration configuration = new CorsConfiguration();
         // ADD THE FRONTEND ORIGINS HERE
-        configuration.setAllowedOrigins(List.of("http://localhost:3000",
+        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000",
                 "http://localhost:5173",
                 "http://localhost:4200",
-                "https://your-app-name.vercel.app"));
+                allowedOrigin));
         configuration.setAllowedMethods(List.of("GET", "POST", "DELETE", "PATCH", "PUT", "OPTIONS")); /*
                                                                                                        * Options are
                                                                                                        * used by the
